--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,17 @@ version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "jax>=0.6.2 ; sys_platform != 'linux'",
+    "jax-dataloader>=0.1.3",
+    "jax[cuda12]>=0.6.2 ; sys_platform == 'linux'",
+    "jaxtyping>=0.3.2",
+]
+
+[dependency-groups]
+utils = [
+    "matplotlib>=3.10.3",
+]
+
+[tool.uv]
+default-groups = ["utils"]
