--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "distrax>=0.1.5",
+    "equinox>=0.12.2",
     "jax>=0.6.2 ; sys_platform != 'linux'",
     "jax-dataloader>=0.1.3",
     "jax[cuda12]>=0.6.2 ; sys_platform == 'linux'",
