--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,15 @@ dependencies = [
     "jax-dataloader>=0.1.3",
     "jax[cuda12]>=0.6.2 ; sys_platform == 'linux'",
     "jaxtyping>=0.3.2",
+    "optax>=0.2.5",
 ]
 
 [dependency-groups]
 utils = [
     "matplotlib>=3.10.3",
+    "tqdm>=4.67.1",
+    "tyro>=0.9.25",
+    "wandb>=0.20.1",
 ]
 
 [tool.uv]
