--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,23 +6,17 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "distrax>=0.1.7",
-    "equinox>=0.12.2",
-    "jax>=0.7.1 ; sys_platform != 'linux'",
+    "equinox>=0.13.2",
+    "jax>=0.8.0 ; sys_platform != 'linux'",
     "jax-dataloader>=0.1.3",
-    "jax[cuda12]>=0.7.1 ; sys_platform == 'linux'",
-    "jaxtyping>=0.3.2",
-    "optax>=0.2.5",
+    "jax[cuda13]>=0.8.0 ; sys_platform == 'linux'",
+    "jaxtyping>=0.3.3",
+    "optax>=0.2.6",
 ]
 
 [dependency-groups]
-plot = [
-    "matplotlib>=3.10.3",
-]
-utils = [
-    "tqdm>=4.67.1",
-    "tyro>=0.9.26",
-    "wandb>=0.20.1",
-]
+plot = ["matplotlib>=3.10.7"]
+utils = ["tqdm>=4.67.1", "tyro>=0.9.26", "wandb>=0.22.3"]
 
 [tool.uv]
 default-groups = ["plot", "utils"]
